--- a/journal/202009.md
+++ b/journal/202009.md
@@ -217,20 +217,17 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
+Monde PR's achievements for September:
 
-Monde PR’s achievements for September:
-
-- Created/pitched two story ideas to the finance and crypto publications
-- Responded to three requests for comments
-- Responded to two news stories about DCR
+- created/pitched 2 story ideas to the finance and crypto publications
+- responded to 3 requests for comments
+- responded to 2 news stories about DCR
 
 News coverage secured by Monde PR:
 
-- An article in [Authority Magazine](https://medium.com/authority-magazine/meet-the-disruptors-how-jake-yocom-piatt-of-decred-aims-to-redefine-governance-with-blockchain-5c3724f20e74) featuring commentary by @jy-p on how Decred aims to redefine governance with blockchain technology
-- An article in [AMB Crypto](https://eng.ambcrypto.com/will-defi-crash-the-crypto-economy-the-same-way-cdos-did/) featuring commentary by @RichardRed on the ‘DeFi bubble’, syndicated to 12 news outlets including [Crypto Fund Report](https://www.cryptofundreport.com/articles/will-defi-crash-the-crypto-economy-the-same-way-cdos-did/) and [Coingenius.news](https://coingenius.news/will-defi-crash-the-crypto-economy-the-same-way)
-- An article in [The Daily Chain](https://thedailychain.com/decred-clarify-details-of-reported-vulnerability/) featuring commentary by @davecgh clarifying details of a reported vulnerability
-
+- an article in [Authority Magazine](https://medium.com/authority-magazine/meet-the-disruptors-how-jake-yocom-piatt-of-decred-aims-to-redefine-governance-with-blockchain-5c3724f20e74) featuring commentary by @jy-p on how Decred aims to redefine governance with blockchain technology
+- an article in [AMB Crypto](https://eng.ambcrypto.com/will-defi-crash-the-crypto-economy-the-same-way-cdos-did/) featuring commentary by @richardred on the 'DeFi bubble', syndicated to 12 news outlets including [Crypto Fund Report](https://www.cryptofundreport.com/articles/will-defi-crash-the-crypto-economy-the-same-way-cdos-did/) and [Coingenius.news](https://coingenius.news/will-defi-crash-the-crypto-economy-the-same-way)
+- an article in [The Daily Chain](https://thedailychain.com/decred-clarify-details-of-reported-vulnerability/) featuring commentary by @davecgh clarifying details of a reported vulnerability
 
 ## Events
 
