Network dcronchain source code

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -203,7 +203,7 @@ Nodes: Throughout [September](https://charts.dcr.farm/d/000000014/nodes?orgId=1&
 
 { richardred anything found for OKEx? } https://twitter.com/RichardRed0x/status/1302910812428873730
 
-[dcronchain.com](https://dcronchain.com/) has launched four months since its [proposal](https://proposals.decred.org/proposals/0230918) was approved in June. The initial version includes 5 interactive charts derived from Decred's on-chain data, based on research by @Checkmate and @PermabullNino. The team is welcoming any feedback on [Reddit](https://www.reddit.com/r/decred/comments/j3589s/release_dcronchaincom_onchain_researchgraphs_in/). Congrats with the launch!
+[dcronchain.com](https://dcronchain.com/) has launched four months since its [proposal](https://proposals.decred.org/proposals/0230918) was approved in June. The initial version includes 5 interactive charts derived from Decred's on-chain data, based on research by @Checkmate and @PermabullNino. The team is welcoming any feedback on [Reddit](https://www.reddit.com/r/decred/comments/j3589s/release_dcronchaincom_onchain_researchgraphs_in/). Source code is available on [GitHub](https://github.com/Decred-Bulls/dcronchain). Congrats with the launch!
 
 ## Integrations
 
