--- a/journal/202009.md
+++ b/journal/202009.md
@@ -223,6 +223,8 @@ A few community members [organized](https://www.reddit.com/r/decred/comments/it0
 
 @pavel, @pablito, and @el\_capitan [launched](https://www.reddit.com/r/decred/comments/it9mkf/withdecredorg_new_portal_to_onboard_newcomers_to/) a new website [withdecred.org](https://withdecred.org/) to find a new scalable approach on how to onboard new users to Decred community. The website contains a series of articles that form a structured "funnel" that leads the person to purchase a few DCR. A [proposal](https://proposals.decred.org/proposals/2bf72e6) followed to fund the operations and a distribution of $5,000 worth of DCR to drive initial engagement, approved in early October. Historically, some community members have been skeptical about giveaways and this project will finally bring some empirical data and gauge the ROI of that model. Companion Twitter handle is [@withdecred](https://twitter.com/withdecred).
 
+@pavel started experimenting with publishing [Decred](https://www.publish0x.com/withdecred/why-we-need-decred-an-inclusive-approach-to-sound-money-xgdwkjl) [content](https://www.publish0x.com/crypto-as-an-agent-for-change/monero-and-decred-are-the-new-bitcoin-xlldpze) on Publish0x since it is a [promising](https://github.com/Decred-Bulls/decred-marketing#why-to-invest-time-into-publish0xcom) crypto portal (900K monthly visitors, average spent time 17 min, 5.3 pages per visit, according to SimilarWeb).
+
 Monde PR's achievements for September:
 
 - created/pitched 2 story ideas to the finance and crypto publications
@@ -397,5 +399,5 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, matheusd, richardred
-- reviews and feedback: davecgh, jholdstock
+- reviews and feedback: davecgh, jholdstock, pavel
 - title image: saender
