Credits add reviewer

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -399,5 +399,5 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, matheusd, richardred
-- reviews and feedback: davecgh, jholdstock, pavel
+- reviews and feedback: Checkmate, davecgh, jholdstock, pavel
 - title image: saender
