--- a/journal/202009.md
+++ b/journal/202009.md
@@ -225,6 +225,8 @@ A few community members [organized](https://www.reddit.com/r/decred/comments/it0
 
 @pavel started experimenting with publishing [Decred](https://www.publish0x.com/withdecred/why-we-need-decred-an-inclusive-approach-to-sound-money-xgdwkjl) [content](https://www.publish0x.com/crypto-as-an-agent-for-change/monero-and-decred-are-the-new-bitcoin-xlldpze) on Publish0x since it is a [promising](https://github.com/Decred-Bulls/decred-marketing#why-to-invest-time-into-publish0xcom) crypto portal (900K monthly visitors, average spent time 17 min, 5.3 pages per visit, according to SimilarWeb).
 
+@pablito and @caibarrad launched the first episode of Decred en Español podcast, available on [YouTube](https://twitter.com/Decred_ES/status/1310654270056923136) and [Spotify](https://twitter.com/Decred_ES/status/1310055071200292869).
+
 Monde PR's achievements for September:
 
 - created/pitched 2 story ideas to the finance and crypto publications
@@ -399,5 +401,5 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, matheusd, richardred
-- reviews and feedback: Checkmate, davecgh, jholdstock, pavel
+- reviews and feedback: Checkmate, elian, davecgh, jholdstock, pavel
 - title image: saender
