--- a/journal/202009.md
+++ b/journal/202009.md
@@ -243,11 +243,15 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Sep 4 - [Hablemos Decred 11](https://twitter.com/Decred_ES/status/1301583356644282368) - Internet. @elian and guest Jose Zarate from Stamping.io discussed timestamps and blockchains. ([video](https://www.youtube.com/watch?v=QwsWiJ8v5qE))
+- Sep 10 - [Hablemos Decred 12](https://twitter.com/Decred_ES/status/1304153821631791104) - Internet. @caibarrad and @elian invited David Riascos from @cLabs to talk about the importance of the community in the development of open protocols and the challenges of adoption in the cryptocurrency industry. ([video](https://www.youtube.com/watch?v=QC5_1PqJb_4))
+- Sep 17 - [Hablemos Decred 13](https://twitter.com/Decred_ES/status/1305595709257846785) - Internet. @adcade and @elian talked with guest Nancy Salazar from Platzi about how to start a career in technolgy and how to overcome the challenges of complex areas such as blockchains. ([video](https://www.youtube.com/watch?v=f_ppC-GVDk8))
+- Sep 25 - [Hablemos Decred 14]( https://twitter.com/Decred_ES/status/1308582624772927494) - Internet. @elian and guest Eloisa Cadenas from CryptoFintech explored the origins of [maximalism](https://es.cointelegraph.com/news/wild-crypto-maximalism), the risks of such line of thought, the future of interoperable blockchains and what are the challenges for adoption and innovation in the cryptocurrency space. ([video](https://www.youtube.com/watch?v=EGaMhQX3Wd4))
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- Oct 17 - [Introduction to blockchain API](https://www.eventbrite.com/e/open-source-workshop-introduccion-a-blockchain-api-de-decred-dcrdata-tickets-124107662359) - Internet. A workshop to explore Decred blockchain with dcrdata API.
+- Oct 19 - [Open Source Software Summit](https://www.eventbrite.com.mx/e/cumbre-de-contribuidores-de-open-source-software-ccoss-2020-tickets-91491063233) - { location? }. @adcade will present Decred.
 
 {announcements in Events domain}
 
