Outreach mention contest

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -227,6 +227,8 @@ A few community members [organized](https://www.reddit.com/r/decred/comments/it0
 
 @pablito and @caibarrad launched the first episode of Decred en Español podcast, available on [YouTube](https://twitter.com/Decred_ES/status/1310654270056923136) and [Spotify](https://twitter.com/Decred_ES/status/1310055071200292869).
 
+@jazzah posted a [contest](https://www.reddit.com/r/decred/comments/ifyb03/contest/) themed "KYC vs Shuffle++" where participants need to complete non-trivial tasks by inspecting a crazy hilarious image. Prize #1 has been claimed but prizes 2-4 are still open for anyone.
+
 Monde PR's achievements for September:
 
 - created/pitched 2 story ideas to the finance and crypto publications
@@ -405,5 +407,5 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, matheusd, richardred
-- reviews and feedback: Checkmate, elian, davecgh, jholdstock, pavel
+- reviews and feedback: Checkmate, elian, davecgh, jazzah, jholdstock, pavel
 - title image: saender
