--- a/journal/202009.md
+++ b/journal/202009.md
@@ -249,10 +249,15 @@ Attended:
 - Sep 10 - [Hablemos Decred 12](https://twitter.com/Decred_ES/status/1304153821631791104) - Internet. @caibarrad and @elian invited David Riascos from @cLabs to talk about the importance of the community in the development of open protocols and the challenges of adoption in the cryptocurrency industry. ([video](https://www.youtube.com/watch?v=QC5_1PqJb_4))
 - Sep 17 - [Hablemos Decred 13](https://twitter.com/Decred_ES/status/1305595709257846785) - Internet. @adcade and @elian talked with guest Nancy Salazar from Platzi about how to start a career in technolgy and how to overcome the challenges of complex areas such as blockchains. ([video](https://www.youtube.com/watch?v=f_ppC-GVDk8))
 - Sep 25 - [Hablemos Decred 14]( https://twitter.com/Decred_ES/status/1308582624772927494) - Internet. @elian and guest Eloisa Cadenas from CryptoFintech explored the origins of [maximalism](https://es.cointelegraph.com/news/wild-crypto-maximalism), the risks of such line of thought, the future of interoperable blockchains and what are the challenges for adoption and innovation in the cryptocurrency space. ([video](https://www.youtube.com/watch?v=EGaMhQX3Wd4))
+- Oct 1 - [Hablemos Decred 15](https://twitter.com/Decred_ES/status/1310685771884625920) - Internet. @elian talked with guest Jose Rodriguez from Bitso and Talent Land about the future of descentralized finance, non fungible tokens and investments of the future using blockchain tech. ([video](https://www.youtube.com/watch?v=wkT01O_mRZk))
+- Oct 2 - [Decentralized Governance Panel](https://twitter.com/Decred_ES/status/1310961312105672705) - Internet. @elian represented Decred project in a panel with Crypto Resources Academy, Kleros and Maker DAO, the discussion was the relevance and future of decentralised governance and cryptocurrencies. ([video](https://twitter.com/Decred_ES/status/1312150389160988673))
+- Oct 8 - [Hablemos Decred 16](https://twitter.com/Decred_ES/status/1313526622927171585) - Internet. @elian talked with guests Anibal Cripto, cryptofinances consultant, and Ezio Rojas, head of news at Cointelegraph en Español, we talked about cryptocurrencies in Venezuela, challenges for adoption and the future of money. ([video](https://www.youtube.com/watch?v=xxNFxZJuOwA))
+- Oct 8 - [Criptolugares instagram live](https://twitter.com/Decred_ES/status/1313869491160444929) - Internet. @elian talked with Jose Manuel da Silva from Criptolugares to explain the governance model of Decred, Politeia and how to start contributing to the project. ([video](https://www.instagram.com/p/CGGZc5Gntil/))
 
 Upcoming:
 
-- Oct 17 - [Introduction to blockchain API](https://www.eventbrite.com/e/open-source-workshop-introduccion-a-blockchain-api-de-decred-dcrdata-tickets-124107662359) - Internet. A workshop to explore Decred blockchain with dcrdata API.
+- Oct 15 - [Hablemos Decred 17](to be announces)  Internet. @elian with Gus Grilliesca will explore the future of art and cryptocurrencies.
+- Oct 17 - [Introduction to blockchain API](https://www.eventbrite.com/e/open-source-workshop-introduccion-a-blockchain-api-de-decred-dcrdata-tickets-124107662359)  Internet. A workshop to explore Decred blockchain with dcrdata API.
 - Oct 19 - [Open Source Software Summit](https://www.eventbrite.com.mx/e/cumbre-de-contribuidores-de-open-source-software-ccoss-2020-tickets-91491063233) - { location? }. @adcade will present Decred.
 
 {announcements in Events domain}
