Dev add dcrlnd vulns

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -46,7 +46,7 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-- {}
+October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd 0.11.x included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. It is recommended to upgrade to latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags).
 
 **[cspp](https://github.com/decred/cspp)**
 
