--- a/journal/202011.md
+++ b/journal/202011.md
@@ -14,7 +14,20 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+Merged in master and backported to v1.6 release branch:
+
+- limited mempool to not track stats for too many unconfirmed [ancestor](https://github.com/decred/dcrd/pull/2458) transactions. This allows to prevent a number of complexity attacks and speed up block template generation for large chains of unconfirmed transactions.
+- default curve to generate RPC certificates changed to P-256 because Chromium (used by Decrediton via Electron) removed support for a stronger P-521, which was previously the default for dcrd. { why not set it up on decrediton end? }
+- corrected treasury vote [status handling](https://github.com/decred/dcrd/pull/2469) in RPC commands
+- added new field to output of some RPC commands to indicate [treasurybase](https://github.com/decred/dcrd/pull/2470) inputs (i.e. funds coming from the new treasury)
+- fixed [orphan blocks](https://github.com/decred/dcrd/pull/2474) stalling sync process { not sure I translated this correctly }
+
+Other merged:
+
+- gencerts tool gained the ability to generate certificates signed by a local CA certificate and key, which helps to reduce configuration complexity
+- fixed concurrency issues
+- more tests for [rpcserver](https://github.com/decred/dcrd/issues/2069)
+- refactored [upgrade](https://github.com/decred/dcrd/pull/2457) logic to deduplicate and make it faster to write future upgrades
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
