--- a/journal/202011.md
+++ b/journal/202011.md
@@ -301,13 +301,16 @@ Ethereum 2.0 staking coverate
 
 { governance, funding, chain forks, community splits }
 
+BCH fork
+
+- how did the fork go?
+- BCH moved to exchanges ahead of the hard fork https://twitter.com/philip_gradwell/status/1326452365004861440
+
 Ethereum network experienced a [disruption](https://www.coindesk.com/ethereums-hard-fork-disruption) on Nov 11. Recent version of Geth node software silently fixed a consensus bug that was dormant for over a year. Since it changed consensus code, it had a risk of an unintended hard fork. One vendor discovered the bug independently and seeing that the majority of nodes have upgraded, decided to test it [in production](https://twitter.com/jinglanW/status/1326651349912719360) and see what would happen. To everyone's surprise, among the minority of nodes running old software was Infura, a popular service provider used by "dapps" to sync with Ethereum network. The bug-triggering transaction halted Infura and a bunch of "decentralized" finance apps that relied on it, including Metamask, MakerDAO, Uniswap, Compound, and others. Binance and other exchanges have also halted trading after noticing conflicting transaction histories. Infura resolved the issue within hours and posted a [post-mortem](https://blog.infura.io/infura-mainnet-outage-post-mortem-2020-11-11/) explaining why they didn't upgrade and calling out the danger of silent consensus fixes. Ethereum developer also published a [post-mortem](https://gist.github.com/karalabe/e1891c8a99fdc16c4e60d9713c35401f) for Geth, which explained that the fix was done silently to not attract unwanted attention from attackers. Among other things, the incident teaches us that deploying critical fixes is challenging because it is a trade-off between informing good actors while not informing bad ones.
 
 ANJ no more: https://twitter.com/AragonProject/status/1329849750485610499
 
-
-
-BCH sent to exchanges ahead of the hard fork https://twitter.com/philip_gradwell/status/1326452365004861440
+MKR flash loans to affect governance https://twitter.com/danhper/status/1321792359638716417 { this is from Oct, notable enough to write up? might mention that the author said a block delay between locking and freeing funds would be enough to mitigate the attack, which reminds Decred's ticket maturation which protects against certain attacks }
 
 { DEX }
 
