--- a/journal/202011.md
+++ b/journal/202011.md
@@ -220,7 +220,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 - Decred listed at https://gioui.org/
 
 Monde PR’s achievements for November:
-- Created and pitched one story idea to the finance and crypto publications
+- Created and pitched one story idea to finance and crypto publications
 - Responded to three requests for comments
 - Secured two media interviews
 
