Dev Decrediton in progress

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -59,6 +59,12 @@ Other merged:
 
 Around 60 bugs were fixed in October and ~65 in November. The growing list of Decrediton's features requires more testing firepower. Big thanks to all testers who help to improve Decrediton!
 
+In progress:
+
+- migration to [grpc-js](https://github.com/decred/decrediton/pull/2936) to significantly reduce build time and binary size
+- automated tests for [Get Started](https://github.com/decred/decrediton/pull/2659) and [Settings](https://github.com/decred/decrediton/pull/2957) pages
+- [Trezor](https://github.com/decred/decrediton/pull/2869) ticket purchasing on testnet
+
 **[Politeia](https://github.com/decred/politeia)**
 
 - {}
