--- a/journal/202011.md
+++ b/journal/202011.md
@@ -343,11 +343,12 @@ dex traded 191K DCR as of Nov 12 https://matrix.to/#/!mlRZqBtfWHrcmgdTWB:decred.
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
-https://www.reddit.com/r/bsv/comments/jq9jv3/and_its_gone_popular_bsv_multisig_provides_no/
+The replacement for P2SH in BSV's electrum wallet was [found](https://www.reddit.com/r/bsv/comments/jq9jv3/and_its_gone_popular_bsv_multisig_provides_no/) to be fundamentally broken, allowing anyone to spend coins held in multi-sig hashes on the BSV chain. 
 
 https://rekt.ghost.io/value-defi-rekt/ - check the boasting about security &lt;24 hours before attack
+The Value DeFi protocol was [hacked](https://rekt.ghost.io/value-defi-rekt/) for $7M, although the attacker returned $2M to the contract address for unknown reasons. The exploit was executed with a flash loan, coming less than 24 hours after Value DeFi had tweeted to boast about robust security with "flash loan attack prevention". 
 
-https://twitter.com/n2ckchong/status/1328510606647848961
+The OUSD stablecoin was [hacked](https://medium.com/originprotocol/urgent-ousd-has-hacked-and-there-has-been-a-loss-of-funds-7b8c4a7d534c) with a flash loan used to conduct a reentrancy attack, to print and rebase (debase) OUSD equivalent to almost the entire circulating supply, allowing the hacker to extract $7M in value. 
 
 The soft-fork implementation of Schnorr signatures and Taproot was [merged](https://github.com/bitcoin/bitcoin/pull/19953) to Bitcoin Core in October.
 
