--- a/journal/202011.md
+++ b/journal/202011.md
@@ -82,7 +82,9 @@ CMS:
 
 **[vspd](https://github.com/decred/vspd)**
 
-- {}
+- do not reject tickets with [invalid](https://github.com/decred/vspd/pull/199) vote choices { why? }
+- accept optional [parent transaction](https://github.com/decred/vspd/pull/205) hex in fee address request
+- bug fixes and code cleanup
 
 **[dcrstakepool](https://github.com/decred/dcrstakepool)**
 
