--- a/journal/202011.md
+++ b/journal/202011.md
@@ -86,13 +86,11 @@ CMS:
 - accept optional [parent transaction](https://github.com/decred/vspd/pull/205) hex in fee address request
 - bug fixes and code cleanup
 
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
-
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- completed [Postgres](https://github.com/decred/dcrpool/pull/282) implementation. All database tests are now run against both Bolt and Postgres. { a few highlights what Postgres offers to dcrpool would help }
+- extracted [errors](https://github.com/decred/dcrpool/pull/284) package to decouple support extracting database into its own package
+- bug fixes and code cleanup
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
