--- a/journal/202011.md
+++ b/journal/202011.md
@@ -94,7 +94,11 @@ CMS:
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd 0.11.x included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. It is recommended to upgrade to latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags).
+- added an [IPC](https://en.wikipedia.org/wiki/Inter-process_communication) [facility](https://github.com/decred/dcrlnd/pull/117) to allow parent processes (such as Decrediton) to control dcrlnd process
+
+October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd 0.11.x included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. More background from the person who discovered them [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002859.html) and [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002855.html).
+
+It is recommended to upgrade to latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags) of dcrlnd.
 
 **[cspp](https://github.com/decred/cspp)**
 
