--- a/journal/202011.md
+++ b/journal/202011.md
@@ -100,13 +100,37 @@ October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from t
 
 It is recommended to upgrade to latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags) of dcrlnd.
 
-**[cspp](https://github.com/decred/cspp)**
-
-- {}
-
 **[dcrdex](https://github.com/decred/dcrdex)**
 
-- {}
+Patch [v0.1.3](https://github.com/decred/dcrdex/releases/tag/v0.1.3) was released fixing a possible client hang and a few smaller issues. Binaries are available as part of the [v1.6 RC4](https://github.com/decred/decred-binaries/releases/tag/v1.6.0-rc4).
+
+- [close buttons](https://github.com/decred/dcrdex/pull/800) on modal dialogs
+- [confirmation](https://github.com/decred/dcrdex/pull/805) counts on order details page
+- [batch](https://github.com/decred/dcrdex/pull/797) redemption transactions to possibly save some coins on tx fees
+- visible notification when an order is [revoked](https://github.com/decred/dcrdex/pull/798)
+- more chart [interactivity](https://github.com/decred/dcrdex/pull/837) (highlight hovered orders on the depth chart and more)
+- TUI [removed](https://github.com/decred/dcrdex/pull/827) _(:small tear drop from terminal lifeforms:)_
+- do not allow trading while blockchain is [syncing](https://github.com/decred/dcrdex/pull/785)
+- run contract auditing [asynchronously](https://github.com/decred/dcrdex/pull/819) to not block incoming messages and other activities for the trade
+- improved [shutdown](https://github.com/decred/dcrdex/pull/787) sequence
+- avoid wallet [locked](https://github.com/decred/dcrdex/pull/817) errors
+- optimized [memory](https://github.com/decred/dcrdex/pull/794) usage of order books
+- configurable [lot limits](https://github.com/decred/dcrdex/pull/815) for new users and users with good swap history { is it a limit on how many orders they can place? or is 'lot' and 'order' not the same? }
+- admin functions to retrieve [market data](https://github.com/decred/dcrdex/pull/771)
+- faster and richer [test harnesses](https://github.com/decred/dcrdex/pull/820)
+- [load testing](https://github.com/decred/dcrdex/pull/717) bot with customizable "programs" to stress the system
+- dexc [Dockerized](https://github.com/decred/dcrdex/pull/836)
+- spec for DEX client's [RPC protocol](https://github.com/decred/dcrdex/pull/702) to help programs other than dexctl (such as Decrediton) use the DEX client
+- fixed several edge cases
+
+A total of 37 PRs from 6 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2020-11-01..2020-11-30+sort%3Aupdated-asc), adding 7K and deleting 4K lines of code.
+
+In progress:
+
+- [max order](https://github.com/decred/dcrdex/pull/842) estimation
+- user [reputation](https://github.com/decred/dcrdex/pull/848)
+- [resuming](https://github.com/decred/dcrdex/pull/856) swaps from the database
+- market data [API endpoints](https://github.com/decred/dcrdex/pull/796) to allow external parties and websites to request data from the DEX
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
