--- a/journal/202011.md
+++ b/journal/202011.md
@@ -134,17 +134,34 @@ In progress:
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+Merged in dcrlibwallet shared library:
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+- ability to send [custom inputs](https://github.com/planetdecred/dcrlibwallet/pull/165)
+- prevent more than one wallet from using the [same seed](https://github.com/planetdecred/dcrlibwallet/pull/138)
+
+In progress:
+
+- show Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503)
+- [vspd](https://github.com/planetdecred/dcrlibwallet/pull/163) support
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+- [French](https://github.com/planetdecred/dcrios/pull/726) translation
+- bug fixes and UI tweaks
+
+In progress:
+
+- Politeia [proposals](https://github.com/planetdecred/dcrios/pull/715)
+- [privacy](https://github.com/planetdecred/dcrios/pull/727) mode
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- [UI overhaul](https://github.com/planetdecred/godcr/pull/262)
+
+In progress:
+
+- [vspd](https://github.com/planetdecred/godcr/pull/263) support
+- Politeia [proposals](https://github.com/planetdecred/godcr/pull/254)
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
