Dev dcrdata, dcrros

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -165,15 +165,14 @@ In progress:
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-- {}
-
-**[tinydecred](https://github.com/decred/tinydecred)**
-
-- {}
+- bug fixes for the Markets page
 
 **[dcrros](https://github.com/decred/dcrros)**
 
-- {}
+- [unit test](https://github.com/decred/dcrros/pull/9) coverage for every service call of the backend and for the majority of the code paths, also updated to Rosetta v1.4.5
+- improved handling of [connection](https://github.com/decred/dcrros/pull/11) to dcrd
+- return [peer list](https://github.com/decred/dcrros/pull/12) and sync status
+- make Construction API methods usable in [offline](https://github.com/decred/dcrros/pull/13) instance as required by the spec
 
 **[docs](https://github.com/decred/dcrdocs)**
 
