--- a/journal/202011.md
+++ b/journal/202011.md
@@ -6,23 +6,22 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
-- new v1.6 RCs (tons of bugfixing and polishing decrediton work)
+- new v1.6 RCs (tons of bugfixing and polishing decrediton work in decrediton)
+- dcrdex a stash of UI and backend improvements and some edge case fixes
 
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
-
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
 
 **[dcrd](https://github.com/decred/dcrd)**
 
 Merged in master and backported to v1.6 release branch:
 
 - limited mempool to not track stats for too many unconfirmed [ancestor](https://github.com/decred/dcrd/pull/2458) transactions. This allows to prevent a number of complexity attacks and speed up block template generation for large chains of unconfirmed transactions.
-- default curve to generate RPC certificates changed to P-256 because Chromium (used by Decrediton via Electron) removed support for a stronger P-521, which was previously the default for dcrd. { why not set it up on decrediton end? }
 - corrected treasury vote [status handling](https://github.com/decred/dcrd/pull/2469) in RPC commands
 - added new field to output of some RPC commands to indicate [treasurybase](https://github.com/decred/dcrd/pull/2470) inputs (i.e. funds coming from the new treasury)
 - fixed [orphan blocks](https://github.com/decred/dcrd/pull/2474) stalling sync process { not sure I translated this correctly }
+- default curve to generate RPC certificates changed to P-256 because Chromium (used by Electron (used by Decrediton)) removed support for a stronger P-521.
 
 Other merged:
 
@@ -34,7 +33,7 @@ Other merged:
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 - use [random coin](https://github.com/decred/dcrwallet/pull/1914) selection for all regular sends
-- save unpublished [fee](https://github.com/decred/dcrwallet/pull/1915) tarnsaction to prevent double spends across wallet restarts
+- save unpublished [fee](https://github.com/decred/dcrwallet/pull/1915) transaction to prevent double spends across wallet restarts
 - send ticket's [parent tx](https://github.com/decred/dcrwallet/pull/1917) in feeaddress request { why? }
 - use correct [change account](https://github.com/decred/dcrwallet/pull/1919) for paying VSP fees when performing a mixed ticket purchase, in order to prevent unmixed change from being used with a mixed account { is it fair to say that there was no privacy leaks because VSP mixed staking is not released yet and there was no such issue for solo mixed staking? }
 - make max VSP fee [configurable](https://github.com/decred/dcrwallet/pull/1933)
@@ -44,15 +43,15 @@ Other merged:
 
 - updating of Trezor [firmware](https://github.com/decred/decrediton/pull/2932) (a step towards [Trezor staking](https://github.com/decred/decrediton/issues/2681) support)
 - [Privacy](https://github.com/decred/decrediton/pull/2987) page reworked for simplicity, following the updated [design](https://github.com/decred/decrediton/issues/2965)
-- introduction to [Privacy](https://github.com/decred/decrediton/pull/2885) help page
-- added [logs](https://github.com/decred/decrediton/pull/2888) to Privacy page
+- introduction to Privacy [help page](https://github.com/decred/decrediton/pull/2885)
+- show [logs](https://github.com/decred/decrediton/pull/2888) on the Privacy page
 - ability to allow sending transactions from accounts [other than](https://github.com/decred/decrediton/pull/2909) mixed account
-- [filter](https://github.com/decred/decrediton/pull/2854) proposals that finished voting by their approved or rejected status
 - filter for [mixed](https://github.com/decred/decrediton/pull/2926) transactions
-- don't allow to [close](https://github.com/decred/decrediton/pull/3005) Decrediton while certain operations are running
-- [AppImage](https://github.com/decred/decrediton/pull/2864) packaging where Decrediton comes as a single executable file (as a side effect this allows GNOME users to avoid having to launch it via CLI)
-- removed [max wallets](https://github.com/decred/decrediton/pull/2886) limit
 - fixed wrong [change](https://github.com/decred/decrediton/pull/2889) destination for privacy wallets
+- [filter](https://github.com/decred/decrediton/pull/2854) proposals that finished voting by their approved or rejected status
+- don't allow to [close](https://github.com/decred/decrediton/pull/3005) Decrediton while certain operations are running
+- [AppImage](https://github.com/decred/decrediton/pull/2864) packaging where Decrediton comes as a single executable file (as a side effect this allows GNOME users to avoid having to launch it via command line)
+- removed [max wallets](https://github.com/decred/decrediton/pull/2886) limit
 - updated [Chinese](https://github.com/decred/decrediton/pull/2927) translation
 - added partial new [translations](https://github.com/decred/decrediton/pull/2974) to Arabic, Italian and Polish
 - many UI tweaks
@@ -83,20 +82,20 @@ CMS:
 **[vspd](https://github.com/decred/vspd)**
 
 - do not reject tickets with [invalid](https://github.com/decred/vspd/pull/199) vote choices { why? }
-- accept optional [parent transaction](https://github.com/decred/vspd/pull/205) hex in fee address request
+- accept optional [parent transaction](https://github.com/decred/vspd/pull/205) in fee address request { why? }
 - bug fixes and code cleanup
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
 - completed [Postgres](https://github.com/decred/dcrpool/pull/282) implementation. All database tests are now run against both Bolt and Postgres. { a few highlights what Postgres offers to dcrpool would help }
-- extracted [errors](https://github.com/decred/dcrpool/pull/284) package to decouple support extracting database into its own package
+- extracted [errors](https://github.com/decred/dcrpool/pull/284) package to support extracting database into its own package
 - bug fixes and code cleanup
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
 - added an [IPC](https://en.wikipedia.org/wiki/Inter-process_communication) [facility](https://github.com/decred/dcrlnd/pull/117) to allow parent processes (such as Decrediton) to control dcrlnd process
 
-October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd 0.11.x included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. More background from the person who discovered them [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002859.html) and [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002855.html).
+October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd [0.11.1](https://github.com/lightningnetwork/lnd/releases/tag/v0.11.1-beta) included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. More background from the person who discovered them [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002859.html) and [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002855.html).
 
 It is recommended to upgrade to latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags) of dcrlnd.
 
@@ -104,12 +103,14 @@ It is recommended to upgrade to latest master or release candidate [tag](https:/
 
 Patch [v0.1.3](https://github.com/decred/dcrdex/releases/tag/v0.1.3) was released fixing a possible client hang and a few smaller issues. Binaries are available as part of the [v1.6 RC4](https://github.com/decred/decred-binaries/releases/tag/v1.6.0-rc4).
 
+Merged in master:
+
 - [close buttons](https://github.com/decred/dcrdex/pull/800) on modal dialogs
 - [confirmation](https://github.com/decred/dcrdex/pull/805) counts on order details page
 - [batch](https://github.com/decred/dcrdex/pull/797) redemption transactions to possibly save some coins on tx fees
 - visible notification when an order is [revoked](https://github.com/decred/dcrdex/pull/798)
 - more chart [interactivity](https://github.com/decred/dcrdex/pull/837) (highlight hovered orders on the depth chart and more)
-- TUI [removed](https://github.com/decred/dcrdex/pull/827) _(:small tear drop from terminal lifeforms:)_
+- TUI [removed](https://github.com/decred/dcrdex/pull/827) _(:terminal lifeforms dropping little tears:)_
 - do not allow trading while blockchain is [syncing](https://github.com/decred/dcrdex/pull/785)
 - run contract auditing [asynchronously](https://github.com/decred/dcrdex/pull/819) to not block incoming messages and other activities for the trade
 - improved [shutdown](https://github.com/decred/dcrdex/pull/787) sequence
@@ -130,7 +131,7 @@ In progress:
 - [max order](https://github.com/decred/dcrdex/pull/842) estimation
 - user [reputation](https://github.com/decred/dcrdex/pull/848)
 - [resuming](https://github.com/decred/dcrdex/pull/856) swaps from the database
-- market data [API endpoints](https://github.com/decred/dcrdex/pull/796) to allow external parties and websites to request data from the DEX
+- market data [API endpoints](https://github.com/decred/dcrdex/pull/796) to allow external parties and websites request data from the DEX
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
