--- a/journal/202011.md
+++ b/journal/202011.md
@@ -233,7 +233,7 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=t1-t2&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
+Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) opened at ~226 Ph/s and closed ~293 Ph/s, bottoming at 215 Ph/s and peaking at 566 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Dec 1: UUPool 43.6%, Poolin 34.8%, easy2mine 13.25%, Huobipool 2.57%, Antpool 1.9%, F2Pool 1.5%, btc.com 1.2%, Luxor 1%, CoinMine 0.018%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
