--- a/journal/202011.md
+++ b/journal/202011.md
@@ -237,7 +237,7 @@ Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashra
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was {n.n, try to snapshot it on 1st} DCR (+{n.n}). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=t1-t2&bin=window&axis=time&visibility=true-false&mode=stepped) {set zoom to show the month} varied between {n.n}-{n.n} DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=t1-t2&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=t1-t2&scale=linear&bin=block&axis=time) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 158.66 DCR (+6.96). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kgvstdix-ki6sqhcl&scale=linear&bin=window&axis=time&visibility=true-false) varied between 139.3-188.85 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) was 6.089-6.609 million DCR, which corresponded to 49.88-53.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -249,7 +249,7 @@ Block size: This month, the blockchain size grew by {n} MB. [Block size](https:/
 
 Transactions: In November, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
 
-Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1604188800000&to=1606780800000) { note: zoom parameters are already set } there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1604188800000&to=1606780800000) { note: zoom parameters are already set } there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}. {NOT WORKING DEC 6, will check again later}
 
 { any interesting analysis or events in the network }
 
