--- a/journal/202011.md
+++ b/journal/202011.md
@@ -239,6 +239,8 @@ Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashra
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 158.66 DCR (+6.96). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kgvstdix-ki6sqhcl&scale=linear&bin=window&axis=time&visibility=true-false) varied between 139.3-188.85 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) was 6.089-6.609 million DCR, which corresponded to 49.88-53.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
 
+Ticket price once again reached new highs of 188.85 DCR.
+
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
 { recap of ticket price action if it was interesting }
