--- a/journal/202011.md
+++ b/journal/202011.md
@@ -385,16 +385,15 @@ dex traded 191K DCR as of Nov 12 https://matrix.to/#/!mlRZqBtfWHrcmgdTWB:decred.
 
 The replacement for P2SH in BSV's electrum wallet was [found](https://www.reddit.com/r/bsv/comments/jq9jv3/and_its_gone_popular_bsv_multisig_provides_no/) to be fundamentally broken, allowing anyone to spend coins held in multi-sig hashes on the BSV chain. 
 
-https://rekt.ghost.io/value-defi-rekt/ - check the boasting about security &lt;24 hours before attack
 The Value DeFi protocol was [hacked](https://rekt.ghost.io/value-defi-rekt/) for $7M, although the attacker returned $2M to the contract address for unknown reasons. The exploit was executed with a flash loan, coming less than 24 hours after Value DeFi had tweeted to boast about robust security with "flash loan attack prevention". 
 
 The OUSD stablecoin was [hacked](https://medium.com/originprotocol/urgent-ousd-has-hacked-and-there-has-been-a-loss-of-funds-7b8c4a7d534c) with a flash loan used to conduct a reentrancy attack, to print and rebase (debase) OUSD equivalent to almost the entire circulating supply, allowing the hacker to extract $7M in value. 
 
-The soft-fork implementation of Schnorr signatures and Taproot was [merged](https://github.com/bitcoin/bitcoin/pull/19953) to Bitcoin Core in October.
+A flash loan was also used to [exploit](https://decrypt.co/46575/group-uses-flash-loan-to-game-maker-protocol-governance) MakerDAO's governance system, by borrowing $7M worth of MKR tokens and using these to vote before immediately repaying the loan. MakerDAO's [response](https://forum.makerdao.com/t/urgent-flash-loans-and-securing-the-maker-protocol/4901) has been to disable certain executive functions in case an attacker is able to access them, and extend the cooling off period during which the community can respond to unexpected proposals passing. Such a weakness would not be present if MKR holders were required to lock tokens for some time in order to vote - or if the amount of MKR available to borrow was less than the amount legitimately engaged in the governance system.
 
-- summary of what does it do
-- https://www.coindesk.com/taproot-merged-bitcoin-core
-- https://bitcoinmagazine.com/articles/taproot-merged-into-bitcoin-core
+The soft-fork implementation of Schnorr signatures and Taproot was [merged](https://github.com/bitcoin/bitcoin/pull/19953) to Bitcoin Core in October, but as yet there is no agreement on the method for [activating](https://www.coindesk.com/taproot-ready-bitcoin-developers-debate-activation) the change on the network. Taproot will add a new type of Schnorr signature, which will allow for greater flexibility with multi-signature wallets and for these transactions to look the same as regular transactions.
+
+The Ethereum 2.0 beacon chain deposit contract was [released](https://www.coindesk.com/ethereum-2-0-contract-deposit-mainnet) in early Nov and reached the target 540,000 ETH deposited on Nov 24, with the final 150,000 ETH coming just hours before a deadline set for a Dec 1 launch. The beacon chain is the first of 4 phases to the launch and migration to Ethereum 2.0, in this initial form the chain's only purpose is to ensure PoS validators can remain in consensus. 
 
 Ethereum 2.0 staking coverate
 
@@ -407,14 +406,14 @@ Ethereum 2.0 staking coverate
 
 BCH fork
 
+The latest Bitcoin Cash hard fork [occurred](https://www.coindesk.com/bitcoin-cash-has-split-into-two-new-blockchains-again) in November, this time the focus of dispute is funding for the ABC developers. This hash war had a clear winner, with the BCHN chain (no dev funding) attracting virtually all of the mining power.
+
 - how did the fork go?
 - BCH moved to exchanges ahead of the hard fork https://twitter.com/philip_gradwell/status/1326452365004861440
 
 Ethereum network experienced a [disruption](https://www.coindesk.com/ethereums-hard-fork-disruption) on Nov 11. Recent version of Geth node software silently fixed a consensus bug that was dormant for over a year. Since it changed consensus code, it had a risk of an unintended hard fork. One vendor discovered the bug independently and seeing that the majority of nodes have upgraded, decided to test it [in production](https://twitter.com/jinglanW/status/1326651349912719360) and see what would happen. To everyone's surprise, among the minority of nodes running old software was Infura, a popular service provider used by "dapps" to sync with Ethereum network. The bug-triggering transaction halted Infura and a bunch of "decentralized" finance apps that relied on it, including Metamask, MakerDAO, Uniswap, Compound, and others. Binance and other exchanges have also halted trading after noticing conflicting transaction histories. Infura resolved the issue within hours and posted a [post-mortem](https://blog.infura.io/infura-mainnet-outage-post-mortem-2020-11-11/) explaining why they didn't upgrade and calling out the danger of silent consensus fixes. Ethereum developer also published a [post-mortem](https://gist.github.com/karalabe/e1891c8a99fdc16c4e60d9713c35401f) for Geth, which explained that the fix was done silently to not attract unwanted attention from attackers. Among other things, the incident teaches us that deploying critical fixes is challenging because it is a trade-off between informing good actors while not informing bad ones.
 
-ANJ no more: https://twitter.com/AragonProject/status/1329849750485610499
-
-MKR flash loans to affect governance https://twitter.com/danhper/status/1321792359638716417 { this is from Oct, notable enough to write up? might mention that the author said a block delay between locking and freeing funds would be enough to mitigate the attack, which reminds Decred's ticket maturation which protects against certain attacks }
+The Aragon project is in the [process](https://aragon.org/blog/lightweight-process) of decommissioning the ANJ token which was introduced one year ago as the token to use with "Aragon Court", a dispute resolution service for smart contracts and DAOs. The ANJ token is now seen as a barrier to the success of Aragon Court, and will be bought out by the ANT holders by issuing ~1% inflation to the holders of ANJ.
 
 { DEX }
 
@@ -422,12 +421,7 @@ MKR flash loans to affect governance https://twitter.com/danhper/status/13217923
 
 { find more reliable coverage or drop } "Unfortunately Coinbase is unable to process your withdrawal because the funds in question have been affiliated with a 3BMEX address." https://twitter.com/Fjvdb7/status/1313524292177596417
 
-{ other: regulations, privacy, security, fun }
-
-69K BTC seized
-
-- https://www.coindesk.com/u-s-seized-more-than-1b-in-silk-road-linked-bitcoin-seeks-forfeiture-bloomberg
-- https://www.coindesk.com/nearly-1b-in-bitcoin-moves-from-wallet-linked-to-silk-road
+US authorities [seized](https://www.coindesk.com/u-s-seized-more-than-1b-in-silk-road-linked-bitcoin-seeks-forfeiture-bloomberg) 69,370 BTC (and forks) worth around $1 billion, apparently with the consent of an unnamed hacker who had stolen the funds from Silk Road in 2013.
 
 ## About This Issue
 
