--- a/journal/202011.md
+++ b/journal/202011.md
@@ -263,6 +263,8 @@ Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&f
 
 ## Integrations
 
+[decredbrasil.com](https://vspd.decredbrasil.com/) , [99split.com](https://vspd.99split.com/), [decredcommunity.org](https://vsp.decredcommunity.org/) and [stakeminer.com](https://vsp.stakeminer.com/) have all added support for the new VSPD.
+
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
